--- a/pages/index.css
+++ b/pages/index.css
@@ -5,8 +5,9 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__img/img.css);
 @import url(../blocks/header/__lang/lang.css);
-@import url(../blocks/header/__lang/lang-ru/_active/lang-ru.css);
-@import url(../blocks/header/__lang/lang-en/lang-en.css);
+@import url(../blocks/langs/langs.css);
+@import url(../blocks/langs/__lang/lang.css);
+@import url(../blocks/langs/__lang/_active/active.css);
 @import url(../blocks/message/message.css);
 @import url(../blocks/message/__title/title.css);
 @import url(../blocks/message/__subtitle/subtitle.css);
