--- a/blocks/region/__conteiner/conteiner.css
+++ b/blocks/region/__conteiner/conteiner.css
@@ -10,10 +10,11 @@
     padding: 0;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
 .region__conteiner {
   gap: 32px;
   margin: 80px 0;
+}
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .region__conteiner {
