--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -9,7 +9,7 @@
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
-@media screen and (min-width: 425px) and (max-width: 767x) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .footer__links {
     flex-direction: column;
     margin: 0 0 48px 16px;
