--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -14,6 +14,7 @@
   .footer__links {
     flex-direction: column;
     gap: 32px;
+    margin: 0 0 48px 16px;
   }
 }
 @media screen and (max-width: 424px) {
